--- a/src/index.css
+++ b/src/index.css
@@ -12,18 +12,34 @@ code {
     monospace;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+p{
+  margin: 0;
+  font-size: 14px;
+}
+
 .snackbar {
   z-index: 9999;
   position: absolute;
   top: 0;
-  right: 0;
-  padding: 20px;
-  background-color: #050505;
-  color: #fff;
+  right: 50px;
+  padding: 10px 20px;
+  background-color: #ffffff;
+  color: #000000;
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 20px;
+  border-radius: 10px;
   transition: all 0.3s ease-in-out;
+}
+
+.snackbar.error {
+  background-color: #ff5100;
+  color: #ffffff;
 }
 
 .snackbar.show {
@@ -58,4 +74,67 @@ code {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.h1{
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.h2{
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.h3{
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.desc{
+  font-size: 14px;
+  margin-bottom: 6px;
+  color: #525252;
+}
+
+input{
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 100%;
+  font-size: 16px;
+}
+
+input:focus{
+  outline: 1.5px solid #660eff;
+}
+
+button{
+  appearance: button;
+  backface-visibility: hidden;
+  background-color: #405cf5;
+  border-radius: 6px;
+  border-width: 0;
+  box-shadow: rgba(50, 50, 93, .1) 0 0 0 2px inset, rgba(50, 50, 93, .1) 0 4px 8px 0, rgba(0, 0, 0, .07) 0 2px 2px 0;
+  color: #fff;
+  cursor: pointer;
+  line-height: 1.15;
+  outline: none;
+  overflow: hidden;
+  padding: 12px 25px;
+  text-align: center;
+  transition: all .2s, box-shadow .08s ease-in;
+}
+
+.textButton {
+  text-decoration: none;
+  padding: 0px;
+  color: #090909;
+  background-color: #ffffff00;
+  box-shadow: unset;
+}
+
+.snackbarMessage{
+  font-size: 14px;
+  font-weight: 600;
 }
