--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,12 @@ code {
     monospace;
 }
 
+:root{
+  --primary: #405cf5;
+  --link-color: #660eff;
+  --red: #ff5100;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -38,7 +44,7 @@ p{
 }
 
 .snackbar.error {
-  background-color: #ff5100;
+  background-color: var(--red);
   color: #ffffff;
 }
 
@@ -61,6 +67,7 @@ p{
 
 .modal {
   position: fixed;
+  border-radius: 10px;
   background-color: #fff;
   padding: 20px;
 }
@@ -102,17 +109,17 @@ input{
   border: 1px solid #ccc;
   border-radius: 4px;
   width: 100%;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 input:focus{
-  outline: 1.5px solid #660eff;
+  outline: 1.5px solid var(--link-color);
 }
 
 button{
   appearance: button;
   backface-visibility: hidden;
-  background-color: #405cf5;
+  background-color: var(--primary);
   border-radius: 6px;
   border-width: 0;
   box-shadow: rgba(50, 50, 93, .1) 0 0 0 2px inset, rgba(50, 50, 93, .1) 0 4px 8px 0, rgba(0, 0, 0, .07) 0 2px 2px 0;
@@ -126,6 +133,31 @@ button{
   transition: all .2s, box-shadow .08s ease-in;
 }
 
+.loaderContainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.loader {
+  width: 50px;
+  padding: 8px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: var(--primary);
+  --_m: 
+    conic-gradient(#0000 10%,#000),
+    linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+          mask: var(--_m);
+  -webkit-mask-composite: source-out;
+          mask-composite: subtract;
+  animation: l3 1s infinite linear;
+}
+@keyframes l3 {to{transform: rotate(1turn)}}
+
 .textButton {
   text-decoration: none;
   padding: 0px;
@@ -137,4 +169,18 @@ button{
 .snackbarMessage{
   font-size: 14px;
   font-weight: 600;
+}
+
+.heading{
+  font-size: 30px;
+  font-weight: 900;
+  margin-bottom: 10px;
+  color: var(--red)
+}
+
+.divider{
+  width: 100%;
+  height: 1px;
+  background-color: #ccc;
+  margin: 10px 0;
 }
