--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,7 @@ p{
   left: 0;
   right: 0;
   bottom: 0;
+  overflow: hidden;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -79,6 +80,8 @@ p{
   right: 0;
   bottom: 0;
   display: flex;
+  width: '100%';
+  height: '100%';
   align-items: center;
   justify-content: center;
 }
@@ -127,7 +130,6 @@ button{
   cursor: pointer;
   line-height: 1.15;
   outline: none;
-  overflow: hidden;
   padding: 12px 25px;
   text-align: center;
   transition: all .2s, box-shadow .08s ease-in;
@@ -175,7 +177,7 @@ button{
   font-size: 30px;
   font-weight: 900;
   margin-bottom: 10px;
-  color: var(--red)
+  color: var(--primary)
 }
 
 .divider{
@@ -183,4 +185,29 @@ button{
   height: 1px;
   background-color: #ccc;
   margin: 10px 0;
+}
+
+
+.skeleton {
+  height: 100px;
+  width: 100px;
+  border-radius: 10px;
+  background-color: #f1f1f1; 
+  margin-bottom: 10px;
+}
+
+@keyframes loading {
+  0% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
+
+.animation {
+  animation: loading 1.5s infinite ease-in-out;
 }
