--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -4,27 +4,30 @@
   height: 100vh;
 }
 
-.sidebar{
-  width: 18%;
-  background-color: #f5f5f5;
-  padding: 20px;
-  border-right: 1px solid #ccc;
-  position: relative;
-}
-
 .search{
   width: 82%;
   padding: 20px;
-  height: 80vw;
+  height: 100vh;
   overflow: auto;
 }
 
 .movies{
-  padding: 20px 0;
   flex: 1;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 40px;
+}
+
+.searchHeaderContent{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.myListBtn{
+  background-color: var(--red);
+  width: max-content;
+  display: none;
 }
 
 /* movie item */
@@ -210,6 +213,39 @@
 
 /* sidebar */
 
+.sidebar{
+  width: 18%;
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-right: 1px solid #ccc;
+  position: relative;
+  transition: all 0.3s ease;
+}
+
+.sidebar-overlay{
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  display: none;
+  transition: all 0.3s ease;
+}
+
+.sidebar.active ~ .sidebar-overlay{
+  display: block;
+}
+
+.sidebar.active{
+  left: 0;
+}
+
+.closeSideBar{
+  display: none;
+}
+
 .sidebarList{
   display: flex;
   flex-direction: column;
@@ -253,6 +289,11 @@
   width: 100%;
   display: flex;
   align-items: center;
+  top: -20px;
+  position: sticky;
+  background-color: white;
+  padding: 20px 0px;
+  z-index: 9999;
   gap: 10px;
 }
 
@@ -260,7 +301,6 @@
   padding: 20px;
   border: 1px solid var(--primary);
   border-radius: 10px;
-  margin-bottom: 20px;
 }
 
 .movieItem-loader{
@@ -284,8 +324,63 @@
   align-items: center;
   gap: 5px;
   justify-content: space-between;
-  width: 80%;
   position: absolute;
   color: red;
   bottom: 20px;
+  right: 20px;
+}
+
+/* media queries */
+
+/* desktop */
+@media screen and (max-width: 1440px) {
+  .movies{
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+
+/* tablet */
+@media screen and (max-width: 1150px) {
+  .movies{
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .myListBtn{
+    display: block;
+  }
+  .sidebar{
+    position: absolute;
+    z-index: 99999;
+    height: 100vh;
+    width: 270px;
+    left: -300px;
+  }
+  .search{
+    width: 100%;
+  }
+  .closeSideBar{
+    display: block;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .movies{
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+/* mobile */
+@media screen and (max-width: 460px) {
+  .movies{
+    grid-template-columns: 1fr;
+  }
+  .sidebarList{
+    height: 50vh;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .sidebar{
+    width: 100%;
+    left: -100%;
+  }
 }
